--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: nginx:latest
     container_name: nginx
     volumes:
-      - ${NGINX_CONF}:/etc/nginx/conf.d/default.conf
+      - ./tools/default-dev.conf:/etc/nginx/conf.d/default.conf
       - ./certs:/etc/nginx/certs
     ports:
       - 80:80
