--- a/tools/default-prod.conf
+++ b/tools/default-prod.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://main;
+        return 301 https://$host$request_uri;
     }
 }
 
