--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "4.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-grid-system": "^7.1.1",
     "react-is": "17.0.1",
     "react-router-dom": "5.2.0",
     "styled-components": "5.2.1",
