--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,14 @@
 {
   "npmScope": "dscodebase",
-  "affected": { "defaultBase": "master" },
+  "affected": {
+    "defaultBase": "master"
+  },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -12,12 +17,21 @@
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
+      "options": {
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
+      }
     }
   },
   "projects": {
-    "main-frontend": { "tags": [] },
-    "main-backend": { "tags": [] },
-    "main-e2e": { "tags": [], "implicitDependencies": ["main-frontend"] }
+    "main-backend": {
+      "tags": []
+    },
+    "main-e2e": {
+      "tags": [],
+      "implicitDependencies": ["main-frontend"]
+    },
+    "main-frontend": {
+      "tags": []
+    }
   }
 }
