--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "cors": "2.8.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-grid-system": "^7.1.1",
-    "react-is": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-grid-system": "7.1.1",
+    "react-is": "17.0.2",
     "react-router-dom": "5.2.0",
     "styled-components": "5.2.1",
     "styled-normalize": "8.0.7",
@@ -48,43 +48,43 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
-    "@nrwl/cli": "11.2.12",
-    "@nrwl/cypress": "11.2.12",
-    "@nrwl/eslint-plugin-nx": "11.2.12",
-    "@nrwl/express": "11.2.12",
-    "@nrwl/jest": "11.2.12",
-    "@nrwl/linter": "11.2.12",
-    "@nrwl/node": "11.2.12",
-    "@nrwl/react": "11.2.12",
-    "@nrwl/tao": "11.2.12",
-    "@nrwl/web": "11.2.12",
-    "@nrwl/workspace": "11.2.12",
-    "@testing-library/react": "11.1.2",
+    "@nrwl/cli": "12.4.0",
+    "@nrwl/cypress": "12.4.0",
+    "@nrwl/eslint-plugin-nx": "12.4.0",
+    "@nrwl/express": "12.4.0",
+    "@nrwl/jest": "12.4.0",
+    "@nrwl/linter": "12.4.0",
+    "@nrwl/node": "12.4.0",
+    "@nrwl/react": "12.4.0",
+    "@nrwl/tao": "12.4.0",
+    "@nrwl/web": "12.4.0",
+    "@nrwl/workspace": "12.4.0",
+    "@testing-library/react": "11.2.5",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
-    "@types/react-is": "16.7.1",
+    "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-is": "17.0.0",
     "@types/react-router-dom": "5.1.7",
-    "@types/styled-components": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@types/styled-components": "5.1.9",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "babel-jest": "26.2.2",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "6.0.1",
-    "dotenv": "6.2.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "2.10.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "26.2.2",
+    "jest": "27.0.3",
     "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
-    "typescript": "4.0.3"
+    "typescript": "4.1.4"
   }
 }
