US-1 | BE | User can see his profile or others' profile

--- a/tools/nginx/default-prod.conf
+++ b/tools/nginx/default-prod.conf
@@ -2,6 +2,10 @@ upstream main {
     server main:5000;
 }
 
+upstream tweeter {
+    server tweeter:5001;
+}
+
 server {
     listen 80;
 
@@ -11,11 +15,21 @@ server {
 }
 
 server {
-    listen 443;
-    ssl on;
+    listen 443 ssl;
     server_name www.dstepanov.com;
     ssl_certificate /etc/nginx/certs/ssl-cert.crt;
     ssl_certificate_key /etc/nginx/certs/ssl-key.key;
+
+    location ^~ /tweeter/api {
+        proxy_pass http://tweeter;
+        rewrite ^/tweeter/api(.*)$ $1 break;
+    }
+
+    location ^~ /tweeter {
+        root /var/www;
+        try_files $uri $uri/ /tweeter;
+        index index.html;
+    }
 
     location / {
         proxy_pass http://main;
