--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   nginx:
     volumes:
-      - ./tools/default-prod.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/default-prod.conf:/etc/nginx/conf.d/default.conf
       - ./certs:/etc/nginx/certs
     ports:
       - 80:80
