--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,26 @@ services:
       - 5000:5000
     networks:
       - nginxnetwork
+  tweeter:
+    container_name: tweeter
+    image: tweeter
+    command: sh -c "npx prisma generate && cross-env pm2 start ecosystem.config.js --no-daemon"
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+    volumes:
+      - ./prisma/schema.prisma:/app/prisma/schema.prisma
+    ports:
+      - 5001:5001
+    networks:
+      - nginxnetwork
   nginx:
     restart: always
     image: nginx:latest
     container_name: nginx
     volumes:
-      - ./tools/default-dev.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/default-dev.conf:/etc/nginx/conf.d/default.conf
       - ./certs:/etc/nginx/certs
+      - ./dist/apps/tweeter/frontend:/var/www/tweeter
     ports:
       - 80:80
     networks:
