--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,12 @@
     },
     "main-frontend": {
       "tags": []
+    },
+    "tweeter-backend": {
+      "tags": []
+    },
+    "tweeter-frontend": {
+      "tags": []
     }
   }
 }
