--- a/package.json
+++ b/package.json
@@ -28,8 +28,16 @@
   "private": true,
   "dependencies": {
     "@fontsource/fira-sans": "4.2.1",
+    "@nestjs/common": "8.0.4",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "8.0.4",
+    "@nestjs/platform-express": "8.0.4",
+    "@nestjs/swagger": "5.0.4",
+    "@prisma/client": "^2.27.0",
     "axios": "0.21.1",
     "body-parser": "1.19.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "core-js": "3.6.5",
     "cors": "2.8.5",
     "document-register-element": "1.13.1",
@@ -39,8 +47,12 @@
     "react-grid-system": "7.1.1",
     "react-is": "17.0.2",
     "react-router-dom": "5.2.0",
+    "reflect-metadata": "0.1.13",
+    "regenerator-runtime": "0.13.7",
+    "rxjs": "6.6.3",
     "styled-components": "5.2.1",
     "styled-normalize": "8.0.7",
+    "swagger-ui-express": "4.1.6",
     "tslib": "2.0.0"
   },
   "devDependencies": {
@@ -48,12 +60,15 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
+    "@nestjs/schematics": "8.0.2",
+    "@nestjs/testing": "8.0.4",
     "@nrwl/cli": "12.4.0",
     "@nrwl/cypress": "12.4.0",
     "@nrwl/eslint-plugin-nx": "12.4.0",
     "@nrwl/express": "12.4.0",
     "@nrwl/jest": "12.4.0",
     "@nrwl/linter": "12.4.0",
+    "@nrwl/nest": "12.5.8",
     "@nrwl/node": "12.4.0",
     "@nrwl/react": "12.4.0",
     "@nrwl/tao": "12.4.0",
@@ -83,6 +98,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.0.3",
     "prettier": "2.2.1",
+    "prisma": "^2.27.0",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.1.4"
